bad/bin_op_ne_string_int.example_compiler_output
ERROR
[1mbad/bin_op_ne_string_int.lat:3:5: [1;31merror: [0;1moperator != cannot compare values of types `string` and `int` because values are not convertible to either of the two types[m
	"" != 42;
	   [1;32m^[m
